# az-game-xiang-qi

./: .clang-format  .clang-format-ignore  .cmake-format.py  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.agents/skills/adding-unittests/: SKILL.md
.agents/skills/adding-unittests/scripts/: find_fr.sh
.agents/skills/building-with-cmake/: SKILL.md
.agents/skills/designing-serialization/: SKILL.md
.agents/skills/finding-alpha-zero-api/: SKILL.md
.agents/skills/reviewing-code/: SKILL.md
.agents/skills/reviewing-fr-test-coverage/: SKILL.md
.agents/skills/updating-readme/: SKILL.md
.agents/skills/updating-unittest-checklists/: SKILL.md
.agents/skills/updating-unittest-checklists/examples/: guan_dan.md
.agents/skills/upgrading-api-version/: SKILL.md
.agents/skills/upgrading-api-version/scripts/: fetch_latest_api_ver.sh  fetch_migration_guides.sh  parse_current_api_ver.sh
.agents/skills/working-on-tasks/: SKILL.md
.agents/skills/working-on-tasks/scripts/: find_task.sh  next_task.sh
.agents/skills/writing-game-header-design-doc/: SKILL.md  card_games.md
.agents/skills/writing-game-header-design-doc/examples/: guan_dan.md
.agents/skills/writing-game-rule-doc/: SKILL.md  card_games.md
.agents/skills/writing-game-rule-doc/examples/: guan_dan.md
.claude/: settings.json
.claude/agents/: reviewing-code.md
.codex/: config.toml
.gemini/policies/: tools.toml
.github/: copilot-instructions.md
.github/instructions/: reviewing-code.instructions.md
.github/workflows/: ci.yml
gui/: .cta.json  README.md  eslint.config.js  package.json  vite.config.ts
gui/public/wasm/: xq.js  xq.wasm
gui/src/: kit-components.tsx  kit.test.ts  kit.ts  styles.css
gui/src/components/: ThemeToggle.tsx
gui/src/components/ui/: badge.tsx  button.tsx  card.tsx
gui/src/components/xiangqi/: AugmentationsGrid.tsx  ControlBar.tsx  DebugPanel.tsx  DebugStatTiles.tsx  GameStatusBar.tsx  MiniBoard.tsx  MoveList.tsx  XiangQiBoard.tsx  index.ts
gui/src/engine/: index.ts  types.ts  useXqGame.ts  xq-game.ts  xq-wasm.ts
gui/src/routes/: __root.tsx  index.tsx
include/xq/: augmentation.h  deserializer.h  game.h  inference.h  serializer.h  train.h
memory/: api_contract.md  augmentation_strategy.md  constitution.md  defaults.md  game_design.md  game_rules.md  gui_design.md  history_lookback.md  main_binary.md  mcts_constraints.md  migrations.md  tasks.md  unittest_checklists.md
memory/game_design_details/: action_encoding.md  board_encoding.md  repetition.md
memory/game_rules_details/: board.md  pieces.md  special_rules.md  termination.md
src/: CMakeLists.txt  main.cc
src/wasm/: CMakeLists.txt  bindings.cc
src/xq/: CMakeLists.txt
src/xq/augmentation/: CMakeLists.txt  augmentation.cc
src/xq/deserializer/: CMakeLists.txt  deserializer.cc
src/xq/game/: CMakeLists.txt  action.cc  basic.cc  constructors.cc  internal.cc  internal.h  state.cc  string_conv.cc
src/xq/inference/: CMakeLists.txt  inference.cc
src/xq/serializer/: CMakeLists.txt  serializer.cc
src/xq/train/: CMakeLists.txt  train.cc
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  augmentation.cc  deserializer.cc  game_action.cc  game_basic.cc  game_constructors.cc  game_state.cc  game_string_conv.cc  inference.cc  serializer.cc  train.cc  valid_actions.h
