function(az_add_game_module module_name)
  add_library(${module_name}_xq STATIC)
  target_link_libraries(${module_name}_xq PUBLIC AlphaZeroAPI::api ${ARGN})
  target_include_directories(${module_name}_xq PUBLIC ${PROJECT_SOURCE_DIR})
endfunction()

az_add_game_module(game)
az_add_game_module(serializer game_xq)
az_add_game_module(deserializer game_xq)
az_add_game_module(augmentation game_xq)
az_add_game_module(inference augmentation_xq)
az_add_game_module(train augmentation_xq)

add_subdirectory(game)
add_subdirectory(serializer)
add_subdirectory(deserializer)
add_subdirectory(augmentation)
add_subdirectory(inference)
add_subdirectory(train)
